contrast fix

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -14,9 +14,9 @@
 // #DBE9EA
 
 $primary: #b26e49;
-$secondary: #9f987e;
+$secondary: #7f7a65;
 $light: #78a7a5;
-$dark: #56918f;
+$dark: #457472;
 $bright: #fff;
 
 $font-family-base: "Poppins", sans-serif;
